# chippy

./: .gitignore  Cargo.toml  README.md
assets/keymaps/: literal.json  modern.json
chip8/: Cargo.toml  README.md
chip8/src/: lib.rs
chip8/src/cpu/: cpu.rs  instruction.rs  keyboard.rs  mod.rs
chip8/src/cpu/timer/: delay_timer.rs  mod.rs  sound_timer.rs
chip8/src/gfx/: screen.rs
docs/: keymaps.md  memory_layout.md  spec.md
src/: keymap.rs  logs.rs  main.rs
src/chip8/: cpu.rs  dumper.rs  mod.rs
src/chip8/cpu/: cpu.rs  instruction.rs  keyboard.rs  mod.rs  rng.rs  sprites.rs
src/chip8/cpu/timer/: sound_timer.rs  timer.rs
src/chip8/gfx/: screen.rs
src/chip8/sound/: beep.rs  message.rs  mod.rs
