[package]
name = "chip8_executable"
version = "0.1.0"
edition = "2021"
authors = ["sungvzer <sungvzer@proton.me>"]

[[bin]]
name = "disassembler"
path = "src/disassembler/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
pixels = "^0.11.0"
tao = "^0.15.8"

# Logging
log = "^0.4.17"
fern = { version = "^0.6.1", features = ["colored"] }

clap = { version = "^4.0.32", features = ["derive", "cargo"] }

# Misc
chrono = "^0.4.23"

[dependencies.chip8]
path = "./chip8"
